[package]
name = "stealth-win-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
lazy_static = "1.4.0"
winresource = "0.1.15"
rand = "0.8.5"
windows-sys = {version="0.45.0", features=["Win32", "Win32_Security", "Win32_Security_Cryptography", "Win32_Foundation"]}